# slide-voice-app

./: .gitignore  .qmlls.ini  AGENTS.md  pyproject.toml  resources.qrc
docs/agents/: documentation.md  project-structure.md  pyside-qml.md  pyside.md  python-style.md  python.md
scripts/: build.py  run.py  utils.py
src/: main.py
src/slide_voice_app/: __main__.py
src/slide_voice_app/pptx/: __init__.py  audio_embed.py  audio_insert.py  exceptions.py  namespaces.py  notes.py  package.py  pptx_file.py  rels.py  xml_helper.py  xpath.py
src/slide_voice_app/pptx/audio/: audio_embed.py  audio_read.py
src/slide_voice_app/qml_modules/SlideVoiceApp/: __init__.py  pptx_manager.py  tts_manager.py  workers.py
src/slide_voice_app/tts/: google.py  provider.py  ssml.py
src/slide_voice_app/ui/: Main.qml  SettingsWindow.qml
src/slide_voice_pptx/: __main__.py  content_types.py  pptx_file.py  xpath.py
src/slide_voice_pptx/audio/: audio_delete.py
tests/data/pptx_samples/1-auto-audio/docProps/: core.xml
tests/data/pptx_samples/1-manual-and-auto-audio/docProps/: core.xml
tests/data/pptx_samples/1-removed-audio/ppt/: revisionInfo.xml  viewProps.xml
tests/data/pptx_samples/2-audio/: [Content_Types].xml
tests/data/pptx_samples/2-audio/ppt/: revisionInfo.xml
tests/data/pptx_samples/4-audio/: [Content_Types].xml
tests/data/pptx_samples/all-removed-audio/: [Content_Types].xml
tests/data/pptx_samples/notes/: [Content_Types].xml
tests/pptx/: test_paths.py
tests/slide_voice_pptx/: test_cli.py
tests/tts/: test_ssml.py
(+68 files in other folders)
