[project]
name = "slide-voice-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.10.1",
]

[project.scripts]
slide-voice-app = "slide_voice_app.main:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
