[project]
name = "slide-voice-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-texttospeech>=2.34.0",
    "nuitka>=2.8.9",
    "patchelf>=0.17.2.4 ; sys_platform == 'linux'",
    "pyside6>=6.10.1",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
